@@ -1,15 +1,18 @@
 <main>
 
 <document>
-<begin>
-&lt;awml&gt;
-&lt;section&gt;
+<begin>&lt;awml&gt;
 </begin>
 <end>
-&lt;/section&gt;
 &lt;/awml&gt;
 </end>
 </document>
+
+<section>
+<begin>
+&lt;section&gt;</begin>
+<end>&lt;/section&gt;</end>
+</section>
 
 <justification>
 <left>left</left>
@@ -18,7 +21,6 @@
 <block>justify</block>
 <asian>&lt;!--Could Someone who sees this tag tell me what was is this type of justification, asian languages only i thing--&gt;</asian>
 </justification>
-
 
 <paragraph>
 <begin>
