@@ -6,4 +6,8 @@ void wvGetDCS_internal(DCS *item,FILE *fd, U8 *pointer);
 void wvGetDTTM_internal(DTTM *,FILE *fd,U8 *pointer);
 void wvGetNUMRM_internal(NUMRM *item,FILE *fd,U8 *pointer);
 void wvGetSHD_internal(SHD *item,FILE *fd,U8 *pointer);
+void wvGetBRC_internal6(BRC *abrc,FILE *infd,U8 *pointer);
+void wvGetTBD_internal(TBD *item,FILE *fd,U8 *pointer);
+void wvGetOLST_internal(int version,OLST *item,FILE *fd,U8 *pointer);
+void wvGetANLV_internal(ANLV *item,FILE *fd,U8 *pointer);
 #endif
